<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textViewRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGoal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <RadioGroup android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no" />

        </RadioGroup>


        <TextView
            android:id="@+id/textViewArrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrive"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/textViewGoal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <RadioGroup android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/textViewGoal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <RadioGroup android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewReflection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reflection"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="95dp" />

    </LinearLayout>

</ScrollView>

